# ffmpeginstaller

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/: __init__.py  downloader.py
src/ffmpeginstaller/: __about__.py  __init__.py
tests/: __init__.py
