[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = ["Ati1707 <ati1707@proton.me>"]
description = "FFmpeg installer and updater for your python projects"
name = "ffmpeginstaller"
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]
requires_python = ">=3"
keywords = ["ffmpeg", "installer", "updater"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools :: FFmpeg",
    "License :: MIT License",
    "Programming Language :: Python :: 3"
]
[project.urls]
Homepage = "https://github.com/Ati1707/ffmpeginstaller"
Repository = "https://github.com/Ati1707/ffmpeginstaller"