[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffmpeginstaller"
dynamic = ["version"]
description = 'FFmpeg installer and updater for your projects'
readme = "README.md"
requires-python = ">=3"
license = "MIT"
keywords = ["ffmpeg", "installer", "updater"]
authors = [
  { name = "Ati1707", email = "ati1707@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/Ati1707/ffmpeginstaller"
Documentation = "https://github.com/Ati1707/ffmpeginstaller#readme"
Issues = "https://github.com/Ati1707/ffmpeginstaller/issues"
Source = "https://github.com/Ati1707/ffmpeginstaller"

[tool.hatch.version]
path = "src/ffmpeginstaller/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ffmpeginstaller tests}"

[tool.coverage.run]
source_pkgs = ["ffmpeginstaller", "tests"]
branch = true
parallel = true
omit = [
  "src/ffmpeginstaller/__about__.py",
]

[tool.coverage.paths]
ffmpeginstaller = ["src/ffmpeginstaller", "*/ffmpeginstaller/src/ffmpeginstaller"]
tests = ["tests", "*/ffmpeginstaller/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.gitignore",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ffmpeginstaller"]